--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
   <div id="root"></div>
 
   <!-- bundle -->
-  <script src="/assets/js/vendor.min.js"></script>
+  <script src="./assets/js/vendor.min.js"></script>
   <script src="/assets/js/app.min.js"></script>
 
   <!-- third party js -->
-  <script src="/assets/js/vendor/apexcharts.min.js"></script>
+   <script src="/assets/js/vendor/apexcharts.min.js"></script>
   <script src="/assets/js/vendor/jquery-jvectormap-1.2.2.min.js"></script>
   <script src="/assets/js/vendor/jquery-jvectormap-world-mill-en.js"></script>
   <!-- third party js ends -->
