--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="/%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- template addmin -->
-  <link rel="shortcut icon" href="assets/images/favicon.ico">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico">
 
   <!-- third party css -->
   <link href="/assets/css/vendor/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
   <div id="root"></div>
 
   <!-- bundle -->
-  <script src="./assets/js/vendor.min.js"></script>
+  <script src="/assets/js/vendor.min.js"></script>
   <script src="/assets/js/app.min.js"></script>
 
   <!-- third party js -->
